--- a/WorldsHardestGame/WorldsHardestGame.csproj
+++ b/WorldsHardestGame/WorldsHardestGame.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ball.cs" />
+    <Compile Include="Died.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Died.Designer.cs">
+      <DependentUpon>Died.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +74,16 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="star.cs" />
+    <Compile Include="Win.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Win.Designer.cs">
+      <DependentUpon>Win.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Died.resx">
+      <DependentUpon>Died.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -85,7 +101,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Win.resx">
+      <DependentUpon>Win.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -98,6 +118,96 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\FIre4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Fire3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Fire2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Fire1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mario1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mario2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Grass_Sample.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pxArt.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mr-krabs-walking %281%29.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mqdefault.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\star4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\star3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\star2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\star1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom14.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom13.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom12.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom11.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom9.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom10.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom8.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom7.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom6.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boom1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
